--- a/app/src/main/res/drawable/circle.xml
+++ b/app/src/main/res/drawable/circle.xml
@@ -1,13 +1,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:innerRadius="0dp"
-    android:shape="ring"
-    android:thicknessRatio="1.9"
-    android:useLevel="false" >
+    android:shape="oval">
 
-    <solid android:color="@android:color/transparent" />
-
-    <stroke
-        android:width="10dp"
-        android:color="@android:color/white" />
+    <size android:height="80dp"
+        android:width="80dp"/>
+    <solid android:color="@color/colorPrimary" />
 
 </shape>
