--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,6 +26,7 @@
         android:layout_alignParentBottom="true"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="70dp"
+        android:inputType="textCapSentences"
         android:layout_marginBottom="16dp"/>
 
     <android.support.design.widget.FloatingActionButton
