--- a/app/src/main/res/layout/category_list_item.xml
+++ b/app/src/main/res/layout/category_list_item.xml
@@ -2,37 +2,44 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@drawable/soft_edge_box"
-    android:gravity="center_vertical"
-    android:padding="16dp"
-    android:layout_marginBottom="10dp">
+    android:paddingBottom="15dp">
 
-    <ImageView
-        android:id="@+id/illustration"
-        android:layout_width="70dp"
-        android:layout_height="70dp"
-        android:layout_marginEnd="10dp" />
-
-    <LinearLayout
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:background="@drawable/soft_edge_box"
+        android:gravity="center_vertical"
+        android:padding="16dp">
 
-        <TextView
-            android:id="@+id/category_name"
+        <ImageView
+            android:id="@+id/illustration"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="10dp"
-            android:text="Category Name"
-            android:textSize="16dp"
-            android:textStyle="bold" />
+            android:layout_marginEnd="10dp"
+            android:background="@drawable/circle"
+            android:padding="10dp" />
 
-        <TextView
-            android:id="@+id/category_description"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="contoh"
-            android:textStyle="italic"/>
+            android:orientation="vertical">
 
+            <TextView
+                android:id="@+id/category_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="10dp"
+                android:text="Category Name"
+                android:textSize="16dp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/category_description"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="contoh"
+                android:textStyle="italic" />
+
+        </LinearLayout>
     </LinearLayout>
 </LinearLayout>
