--- a/app/src/main/res/layout/cart_list_item.xml
+++ b/app/src/main/res/layout/cart_list_item.xml
@@ -4,7 +4,11 @@
     android:layout_height="wrap_content"
     android:padding="16dp">
 
-
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_delete_black_24dp"
+        android:tint="@color/colorPrimary" />
     <TextView
         android:id="@+id/cart_product_name"
         android:layout_width="wrap_content"
