--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,7 @@
     android:background="#FFF">
 
     <android.support.v7.widget.RecyclerView
-        android:padding="16dp"
+        android:layout_margin="16dp"
         android:id="@+id/list_view_chats"
         android:layout_width="match_parent"
         android:layout_height="500dp"
