--- a/app/src/main/res/layout/cart_list_item.xml
+++ b/app/src/main/res/layout/cart_list_item.xml
@@ -6,14 +6,13 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:gravity="center_vertical">
 
         <TextView
             android:id="@+id/cart_product_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="start"
-            android:gravity="start"
             android:text="Indomie Goreng"
             android:textStyle="bold" />
 
