--- a/app/src/main/res/layout/chat_view_holder.xml
+++ b/app/src/main/res/layout/chat_view_holder.xml
@@ -65,7 +65,7 @@
             <ListView
                 android:id="@+id/list_of_product"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="250dp"
                 android:layout_marginBottom="10dp"/>
 
             <Button
@@ -74,7 +74,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:backgroundTint="@color/colorPrimary"
-                android:text="see more"
+                android:text="Lihat selengkapnya"
                 android:textColor="#FFF" />
         </LinearLayout>
     </LinearLayout>
@@ -160,7 +160,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
                     android:backgroundTint="@color/colorPrimary"
-                    android:text="choose"
+                    android:text="pilih"
                     android:textColor="#FFF" />
 
             </LinearLayout>
@@ -180,7 +180,7 @@
                 <ImageView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/ic_account_balance_wallet_black_24px"
+                    android:src="@drawable/ic_credit_card_black_24px"
                     android:tint="@color/colorPrimary" />
 
                 <TextView
@@ -195,7 +195,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
                     android:backgroundTint="@color/colorPrimary"
-                    android:text="choose"
+                    android:text="pilih"
                     android:textColor="#FFF" />
 
             </LinearLayout>
@@ -224,7 +224,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:backgroundTint="@color/colorPrimary"
-            android:text="see more"
+            android:text="lihat selengkapnya"
             android:textColor="#FFF" />
 
     </LinearLayout>
