--- a/app/src/main/res/layout/product_list_item.xml
+++ b/app/src/main/res/layout/product_list_item.xml
@@ -2,38 +2,44 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@drawable/soft_edge_box"
-    android:gravity="center_vertical"
-    android:padding="16dp"
-    android:layout_marginBottom="10dp">
+    android:paddingBottom="7dp">
 
-    <ImageView
-        android:id="@+id/product_illustration"
-        android:layout_width="70dp"
-        android:layout_height="70dp"
-        android:layout_marginEnd="10dp"
-        android:src="@drawable/indomie"/>
-
-    <LinearLayout
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:layout_marginBottom="10dp"
+        android:background="@drawable/soft_edge_box"
+        android:gravity="center_vertical"
+        android:padding="16dp">
 
-        <TextView
-            android:id="@+id/product_list_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="10dp"
-            android:text="ProductName"
-            android:textSize="16dp"
-            android:textStyle="bold" />
+        <ImageView
+            android:id="@+id/product_illustration"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
+            android:layout_marginEnd="10dp"
+            android:src="@drawable/indomie" />
 
-        <TextView
-            android:id="@+id/product_list_price"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Harga :"
-            android:textStyle="italic"/>
+            android:orientation="vertical">
 
+            <TextView
+                android:id="@+id/product_list_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="10dp"
+                android:text="ProductName"
+                android:textSize="16dp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/product_list_price"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Harga :"
+                android:textStyle="italic" />
+
+        </LinearLayout>
     </LinearLayout>
 </LinearLayout>
