--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,42 +1,110 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/navigation_drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.kahl.chatmart.MainActivity"
-    android:background="#FFF">
+    android:background="#FFF"
+    tools:context="com.kahl.chatmart.MainActivity">
 
-    <android.support.v7.widget.RecyclerView
-        android:layout_margin="16dp"
-        android:id="@+id/list_view_chats"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="500dp"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true" />
+        android:layout_height="match_parent">
 
-    <EditText
-        android:padding="8dp"
-        android:background="@drawable/soft_edge_box"
-        android:id="@+id/edit_text_user_input"
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/list_view_chats"
+            android:layout_width="match_parent"
+            android:layout_height="500dp"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_margin="16dp" />
+
+        <EditText
+            android:id="@+id/edit_text_user_input"
+            android:layout_width="300dp"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_marginBottom="16dp"
+            android:layout_marginEnd="70dp"
+            android:layout_marginStart="16dp"
+            android:background="@drawable/soft_edge_box"
+            android:hint="Apa yang anda inginkan?"
+            android:inputType="textCapSentences"
+            android:padding="8dp"
+            android:textColor="@color/colorPrimary" />
+
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/fab_send"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentEnd="true"
+            android:layout_margin="16dp"
+            android:src="@drawable/ic_send_white_24px"
+            app:fabSize="mini" />
+
+    </RelativeLayout>
+
+    <RelativeLayout
         android:layout_width="300dp"
-        android:layout_height="wrap_content"
-        android:hint="Apa yang anda inginkan?"
-        android:textColor="@color/colorPrimary"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="70dp"
-        android:inputType="textCapSentences"
-        android:layout_marginBottom="16dp"/>
+        android:layout_height="match_parent"
+        android:background="#FFF"
+        android:layout_gravity="start|left">
 
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab_send"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true"
-        android:layout_margin="16dp"
-        app:fabSize="mini"
-        android:src="@drawable/ic_send_white_24px" />
+        <LinearLayout
+            android:id="@+id/bg_nav"
+            android:layout_width="match_parent"
+            android:layout_height="170dp"
+            android:background="@drawable/bg_nav"
+            android:orientation="vertical"
+            android:scaleType="fitXY"
+            android:padding="16dp"
+            android:gravity="center_vertical">
 
-</RelativeLayout>
+            <ImageView
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:src="@drawable/ic_account_circle_white_24px"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Smitty Werbenjagermangensen"
+                android:textColor="#FFF"
+                android:layout_marginTop="10dp"
+                android:textStyle="bold|italic"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="#FFF"
+                android:text="smitty@chatmart.com"/>
+
+            <TextView
+                android:layout_marginTop="16dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="#FFF"
+                android:text="(+62) 812 3456 7890"/>
+
+        </LinearLayout>
+
+        <ListView
+            android:id="@+id/drawer_list"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/bg_nav" />
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_margin="16dp"
+            android:backgroundTint="@color/colorPrimary"
+            android:text="keluar"
+            android:textColor="#FFF" />
+
+    </RelativeLayout>
+
+</android.support.v4.widget.DrawerLayout>
